# scdl

./: .dockerignore  .gitignore  .pre-commit-config.yaml  AUTHORS  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  MANIFEST.in  PROJECT-SUMMARY.md  README.md  README.rst  batch-urls.txt  callback.html  docker-compose.yml  index.html  mypy.ini  pyproject.toml  requirements.dev.txt  ruff.toml  scdl.cfg  scdl.py  setup.py
.github/: FUNDING.yml  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  performance.yml  publish.yml  pypi.yml  release.yml  security.yml  update-yt-dlp.yml
config/: scdl.cfg
css/: soundcloud.css
docs/: DOCKER.md  USAGE.md
scdl/: __init__.py  client.py  metadata_assembler.py  scdl.cfg  scdl.py  soundcloud.py  utils.py
scdl/.ropeproject/: globalnames
scdl/patches/: __init__.py  commented_tracks_extractor.py  embed_thumbnail.py  ffmpeg_metadata.py  fix_nested_playlist.py  mutagen_postprocessor.py  old_archive_ids.py  original_filename_postprocessor.py  original_filename_preprocessor.py  playlist_metadata.py  switch_outtmpl_preprocessor.py  sync_download_archive.py  thumbnail_selection.py  trim_filenames.py
scripts/: performance_monitor.py
test/: test.m3u
tests/: test_benchmarks.py  test_integration.py  test_playlist.py  test_search.py  test_track.py  test_user.py  utils.py
