[project]
name = "scdl"
version = "3.0.0"
authors=[
    {name = "7x11x13", email = "7x11x13@pm.me"}, 
    {name = "FlyinGrub", email = "flyinggrub@gmail.com"}
]
maintainers=[
    {name = "7x11x13", email = "7x11x13@pm.me"}
]
description = "Download Music from SoundCloud"
readme = "README.md"
license = {text = "GPL-2.0"}
requires-python = ">=3.9.0"
keywords = ["soundcloud", "download", "music", "audio", "cli"]
dependencies = [
    "docopt-ng>=0.9.0",
    "mutagen>=1.47.0",
    "soundcloud-v2>=1.6.0",
    "yt-dlp>=2025.2.19",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: GNU General Public License v2 (GPLv2)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet",
    "Topic :: Multimedia :: Sound/Audio",
    "Topic :: Utilities",
]

[dependency-groups]
dev = [
    "music-tag>=0.4.3",
    "mypy>=1.13.0",
    "pytest>=8.3.4",
    "pytest-cov>=6.0.0",
    "pytest-dotenv>=0.5.2",
    "pytest-xdist>=3.6.0",
    "coverage[toml]>=7.6.0",
    "psutil>=6.1.0",
    "ruff>=0.8.3",
    "types-requests>=2.32.0.20241016",
    "typing_extensions>=4.12.2; python_version < '3.11'",
]

[project.urls]
Issues = "https://github.com/scdl-org/scdl/issues"
Repository = "https://github.com/scdl-org/scdl"
Changelog = "https://github.com/scdl-org/scdl/blob/master/CHANGELOG.md"

[project.scripts]
scdl = "scdl.scdl:_main"

[tool.uv]
package = true

[tool.ruff]
target-version = "py39"
line-length = 120

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "ANN",
    "C90", "D",
    "S", "BLE", "FBT", "A", "EM", "FA", "G", "SLF", "PTH",
    "PLR", "TRY",
    "PLW2901", "ANN204",
    "COM812", "ISC001",
    "EXE"
]

[tool.mypy]
packages = ["scdl", "tests"]
check_untyped_defs = true
disable_error_code = ["import-untyped"]

[[tool.mypy.overrides]]
module = "scdl.patches.*"
ignore_errors = true

[tool.pytest.ini_options]
minversion = "8.0"
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=scdl",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]

[tool.coverage.run]
source = ["scdl"]
omit = [
    "*/tests/*",
    "*/test_*",
    "setup.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
